# analytical-detector-sim

./: .gitignore  pyproject.toml
adetsim/: __init__.py
adetsim/atmoatt/: atmospheric_attenuator.py  atmospheric_lookup_table.py
adetsim/hafx_src/: HafxMaterialProperties.py  HafxSimulationContainer.py  HafxStack.py  X123CdTeStack.py  X123Stack.py  detectors.py  sipm3000.py
adetsim/sim_src/: AttenuationData.py  DetectorStack.py  FlareSpectrum.py  Material.py  PhotonDetector.py  impress_constants.py  magic_data.py  material_constants.py  material_manager.py
examples/: air-example.ipynb  example-detector-sim.ipynb  plot_atmospheric_thickness.ipynb  pymsis_example.ipynb
projects/exact/: do-we-need-x123.py
projects/grips-piggyback/: compare-thicknesses.ipynb  compare_eff_areas.py  fierce_effective_area.py  grips_stack.py  mcmurdo_station_attenuation.py  mission_photon_requirements.ipynb  sim_grips_basic.py
projects/impress/cebr3-scripts/: calc_counts_range.py  compute_counts_flare_raw_inc.py  estimate_pileup_rate.py  make_flight_scintillator_responses.py  vary_thicknesses_for_luxel.py
projects/impress/cebr3-scripts/compare-trevor/: direct_compare_trevor.py
projects/impress/x123-scripts/: compare_amptek_mine_proability.py  make_x123_response.py  normal_vs_1mm_x123.py
projects/impress/x123-scripts/attenuator-picking/: plot_attenuated.py  x123_attenuators.py
