[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "adetsim",
    "adetsim.hafx_src",
    "adetsim.sim_src",
    "adetsim.atmoatt",
]

[tool.setuptools.package-data]
"adetsim.atmoatt" = ["styles/*"]

[project]
version = "0"
name = "adetsim"
dependencies = [
    "asdf",
    "asdf_astropy",
    "astropy",
    "matplotlib",
    "numpy",
    "pymsis",
    "requests",
    "scipy",
]